# rust-git-scaner

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
src/: main.rs  scanner.rs  utils.rs
