[package]
name = "rust-git-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"
reqwest = "0.12.9"
time = "0.3.36"
tokio = {version="1", features = ["full"]}
